Remove sleep keybindings

Running "apm" -> bad

It's also pretty useless because the sleep button is already
handled through other means in gnome-power-manager, etc.

https://bugzilla.gnome.org/show_bug.cgi?id=170175